FIXED: kms delete alias. REMOVED: console.log statements

--- a/views/kms/kms-key-detail.hbs
+++ b/views/kms/kms-key-detail.hbs
@@ -38,7 +38,7 @@
         <tr>
             <th>
                 <div class="d-flex">
-                    <a href="/kms/disable?keyId={{KeyId}}" class="btn btn-outline-danger me-1" type="button">Delete</a>
+                    <a href="/kms/delete-alias?alias={{AliasName}}" class="btn btn-outline-danger me-1" type="button">Delete</a>
                 </div>
             </th>
             <th scope="row">{{AliasArn}}</th>
