ADDED: kms key delete option

--- a/views/kms/kms-list.hbs
+++ b/views/kms/kms-list.hbs
@@ -25,7 +25,8 @@
         <tr>
             <th>
                 <div class="d-flex">
-                    <a href="/kms/disable?keyId={{KeyId}}" class="btn btn-outline-danger me-1" type="button">Disable</a>
+                    <a href="/kms/delete-key?keyId={{KeyId}}" class="btn btn-outline-danger me-1" type="button">Delete</a>
+                    <a href="/kms/disable?keyId={{KeyId}}" class="btn btn-outline-warning me-1" type="button">Disable</a>
                     <a href="/kms/enable?keyId={{KeyId}}" class="btn btn-outline-success" type="button">Enable</a>
                 </div>
             </th>
