ADDED: new ec2 security groups details page

--- a/views/ec2/ec2-launch.hbs
+++ b/views/ec2/ec2-launch.hbs
@@ -25,7 +25,7 @@
     </div>
     <div class="mb-3">
         <label for="userData" class="form-label">User Data</label>
-        <input type="text" class="form-control" id="userData" name="userData">
+        <textarea class="form-control" id="userData" rows="3" name="userData"></textarea>
     </div>
 
     <button class="btn btn-outline-secondary" type="reset">Reset</button>
