--- a/views/ec2/ec2-list.hbs
+++ b/views/ec2/ec2-list.hbs
@@ -3,10 +3,11 @@
 
 <a href="/ec2/launch" role="button" class="btn btn-outline-primary">Launch EC2</a>
 <a href="/ec2/create-keys" role="button" class="btn btn-outline-primary">Create Keys</a>
+<a href="/ec2/create-sg" role="button" class="btn btn-outline-primary">Create SG</a>
 
 <ul class="mt-2 nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link {{#ifEq tab 'key-pairs'}}active{{/ifEq}}" href="?tab=key-pairs">Key Pairs</a>
+    <a class="nav-link {{#ifEq tab 'keys'}}active{{/ifEq}}" href="?tab=keys">Key Pairs</a>
   </li>
   <li class="nav-item">
     <a class="nav-link {{#ifEq tab 'instances'}}active{{/ifEq}}" href="?tab=instances">Instances</a>
@@ -19,7 +20,7 @@
   </li>
 </ul>
 
-{{#ifEq tab 'key-pairs'}}
+{{#ifEq tab 'keys'}}
 <h4 class="mt-2">Key Pairs</h4>
 <table class="table">
     <thead>
@@ -174,26 +175,24 @@
     <thead>
         <tr>
             <th scope="col">Actions</th>
-            <th scope="col">GroupName</th>
-            <th scope="col">OwnerId</th>
-            <th scope="col">GroupId</th>
-            <th scope="col">VpcId</th>
-            <th scope="col">IpPermissionsEgress</th>
+            <th scope="col">Group Name</th>
+            <th scope="col">Owner Id</th>
+            <th scope="col">Group Id</th>
+            <th scope="col">Vpc Id</th>
         </tr>
     </thead>
     <tbody>
         {{#each SecurityGroups}}
         <tr>
             <th>
-                <a href="/ec2/remove-sg?name={{GroupName}}" class="btn btn-outline-danger" type="button">Delete</a>
+                <a href="/ec2/remove-sg?groupId={{GroupId}}" class="btn btn-outline-danger" type="button">Delete</a>
             </th>
             <th scope="row">
-                <a href="/s3/sg-details?name={{GroupName}}">{{GroupName}}</a>
+                <a href="/ec2/details-sg?groupId={{GroupId}}">{{GroupName}}</a>
             </th>
             <td>{{OwnerId}}</td>
             <td>{{GroupId}}</td>
             <td>{{VpcId}}</td>
-            <td><pre>{{json IpPermissionsEgress 2}}</pre></td>
         </tr>
         {{/each}}
     </tbody>
