ADDED: search functionality in sqs list

--- a/views/sqs/sqs-list.hbs
+++ b/views/sqs/sqs-list.hbs
@@ -4,6 +4,18 @@
 
 <a href="/sqs/create" type="button" class="btn btn-outline-success">Create Queue</a>
 <a href="/sqs/purge-queue?queue=*" type="button" class="btn btn-outline-warning">Purge All Queues</a>
+
+<div class="search-box mt-2">
+  <form method="get">
+
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Search Box" name="search" />
+      <button class="btn btn-outline-primary" type="submit">Search</button>
+    </div>
+
+  </form>
+</div>
+
 <div class="table-responsive">
   <table class="table table-responsive">
     <thead class="thead-dark">
