ADDED: search by object key in s3

--- a/views/sqs/sqs-list.hbs
+++ b/views/sqs/sqs-list.hbs
@@ -9,7 +9,7 @@
   <form method="get">
 
     <div class="input-group mb-3">
-      <input type="text" class="form-control" placeholder="Search Box" name="search" />
+      <input type="text" class="form-control" placeholder="Search Queue" name="search" />
       <button class="btn btn-outline-primary" type="submit">Search</button>
     </div>
 
