--- a/views/s3/s3-bucket-detail.hbs
+++ b/views/s3/s3-bucket-detail.hbs
@@ -3,8 +3,19 @@
 
 <p>Bucket Name: {{name}}</p>
 
-<form method="post" action="/s3/upload" enctype="multipart/form-data" >
+<div class="search-box mt-2">
+  <form method="get">
+     <input type="text" name="name" value="{{name}}" style="display: none;" />
 
+    <div class="input-group mb-3">
+      <input type="text" class="form-control" placeholder="Search Key" name="search" />
+      <button class="btn btn-outline-primary" type="submit">Search</button>
+    </div>
+
+  </form>
+</div>
+
+<form method="post" action="/s3/upload" enctype="multipart/form-data" >
     <input type="text" name="bucket" value="{{name}}" style="display: none;" />
 
     <div class="mb-3">
@@ -13,7 +24,6 @@
     </div>
 
     <button class="btn btn-outline-success" type="submit">Upload</button>
-
 </form>
 
 <table class="table">
