ADDED: presigned url feature

--- a/views/s3/s3-object-detail.hbs
+++ b/views/s3/s3-object-detail.hbs
@@ -2,6 +2,8 @@
 <h2>Object Details</h2>
 
 <a href="/s3/object/download?bucket={{bucket}}&key={{key}}" class="btn btn-outline-success">Download 🥳</a>
+<a href="/s3/presigned-get?bucket={{bucket}}&key={{key}}" class="btn btn-outline-primary">Generate Presigned Get</a>
+<a href="/s3/presigned-put?bucket={{bucket}}&key={{key}}" class="btn btn-outline-primary">Generate Presigned Put</a>
 
 <h4 class="mt-2">Bucket:</h4>
 <p>{{bucket}}</p>
