ADDED: s3 features object versioning

--- a/views/s3/s3-bucket-detail.hbs
+++ b/views/s3/s3-bucket-detail.hbs
@@ -1,10 +1,11 @@
 
 <h2>Bucket Details - {{name}}</h2>
 
-<a href="/s3/bucket-policy?bucket={{name}}" role="button" class="btn btn-outline-primary" >Edit Bucket Policy</a>
-<a href="/s3/create-website?bucket={{name}}" role="button" class="btn btn-outline-primary" >Create Website</a>
+<a href="/s3/bucket-policy?bucket={{name}}" role="button" class="btn btn-outline-primary" >Bucket Policy</a>
+<a href="/s3/bucket-versioning?bucket={{name}}" role="button" class="btn btn-outline-primary" >Bucket Versioning</a>
+<a href="/s3/create-website?bucket={{name}}" role="button" class="btn btn-outline-success" >Create Website</a>
 
-<a href="http://{{name}}.s3-website.localhost.localstack.cloud:4566" target="_blank" role="button" class="btn btn-outline-primary">Goto Website</a>
+<a href="http://{{name}}.s3-website.localhost.localstack.cloud:4566" target="_blank" role="button" class="btn btn-outline-secondary">Goto Website</a>
 
 
 <div class="search-box mt-2">
