--- a/views/s3/s3-object-detail.hbs
+++ b/views/s3/s3-object-detail.hbs
@@ -25,7 +25,7 @@
     <button class="btn btn-outline-success" type="submit">Update</button>
 </form>
 
-<h4>Version:</h4>
+<h4 class="mt-2">Versions:</h4>
 <table class="table">
     <thead>
         <tr>
